# PIAIC

ass/: Cargo.toml
ass/src/: main.rs
assignment/: Cargo.toml
assignment/src/: assignment2.rs  assignment3.rs  main.rs  tes.rs
assignments/one/: Cargo.toml
dan/: Cargo.toml
dans/: Cargo.toml
directed/: Cargo.toml
done/: Cargo.toml
hello/: Cargo.toml
hello/src/: main.rs
sumlib/: Cargo.toml
week10/: Cargo.toml
week10/src/: main.rs  second.rs  third.rs
week3/: Cargo.toml
week3/src/: main.rs
week4/: Cargo.toml
week4/src/: main.rs
week5/: Cargo.toml
week5/src/: main.rs
week6/: Cargo.toml
week6/src/: main.rs
week7/: Cargo.toml
week8/: Cargo.toml
week8/src/: main.rs
