[package]
name = "sumlib"
version = "0.0.2"
authors = ["Daniyal Ahmed <daniahmedkhatri@gmail.com>"]
edition = "2018"
license = "MIT"
description = "This is just a discription"
readme = "readme.md"
documentation = "This just a documentation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
